--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
             <div id="category">
                 <strong><h2 style="position: absolute;top: 15px;left: 20px;">Category : </h2></strong>
-                <b> <a href="category.jsp" style="position: absolute;top: 20px;left: 88%;width: auto;height: auto;background-color: #ebe6ff;padding: 5px 15px;border-radius: 8px;color: rgb(111, 111, 255);">View all </a></b>
+                <b> <a href="category.html" style="position: absolute;top: 20px;left: 88%;width: auto;height: auto;background-color: #ebe6ff;padding: 5px 15px;border-radius: 8px;color: rgb(111, 111, 255);">View all </a></b>
                 <a href="">
                     <div class="card" style="width:200px;margin-left: 40px;height: 300px;">
                         <img class="card-img-top" src="image/TheNakedMughals_ProductImage_332x.webp" alt="Card image" style="width:100%;">
